--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               alt=""
             />
             <div class="card-body bg-dark">
-          <p class="card-text text-light"> Amazon Forest: Ravine</p>
+          <p class="card-text text-light"> Amazon Forest:Ravine</p>
             </div>
           
           </div>
@@ -40,7 +40,7 @@
                   alt=""
                 />
                 <div class="card-body bg-dark">
-                  <p class="card-text text-light"> Amazon Forest: Ravine</p>
+                  <p class="card-text text-light"> Amazon Forest: River</p>
                     </div>
               </div>
         </div>
@@ -53,7 +53,7 @@
                   height="100%"
                 />
                 <div class="card-body bg-dark">
-                  <p class="card-text text-light"> Amazon Forest: Ravine</p>
+                  <p class="card-text text-light"> Amazon Forest: River2</p>
                     </div>
               </div>
           
@@ -69,7 +69,7 @@
                   alt=""
                 />
                 <div class="card-body bg-dark">
-                  <p class="card-text text-light"> Amazon Forest: Ravine</p>
+                  <p class="card-text text-light"> Volcano</p>
                     </div>
               </div>
         </div>
@@ -81,7 +81,7 @@
                   alt=""
                 />
                 <div class="card-body bg-dark">
-                  <p class="card-text text-light"> Amazon Forest: Ravine</p>
+                  <p class="card-text text-light"> Volcano2</p>
                     </div>
               </div>
         </div>
@@ -97,7 +97,7 @@
               alt=""
             />
             <div class="card-body bg-dark">
-              <p class="card-text text-light"> Amazon Forest: Ravine</p>
+              <p class="card-text text-light"> Savanna Elephant</p>
                 </div>
           </div>
               </div>
@@ -110,7 +110,7 @@
                   alt=""
                 />
                 <div class="card-body bg-dark">
-                  <p class="card-text text-light"> Amazon Forest: Ravine</p>
+                  <p class="card-text text-light"> Savanna Cheetah</p>
                     </div>
               </div>
         </div>
@@ -122,7 +122,7 @@
                   alt=""
                 />
                 <div class="card-body bg-dark">
-                  <p class="card-text text-light"> Amazon Forest: Ravine</p>
+                  <p class="card-text text-light">  Savanna Trees</p>
                     </div>
               </div>
         </div>
@@ -134,7 +134,7 @@
                   alt=""
                 />
                 <div class="card-body bg-dark">
-                  <p class="card-text text-light"> Amazon Forest: Ravine</p>
+                  <p class="card-text text-light"> Savanna Giraffes</p>
                     </div>
               </div>
         </div>
@@ -148,7 +148,7 @@
                   alt=""
                 />
                 <div class="card-body bg-dark">
-                  <p class="card-text text-light"> Amazon Forest: Ravine</p>
+                  <p class="card-text text-light"> Mount Everest</p>
                     </div>
               </div>
         </div>
@@ -160,7 +160,7 @@
                   alt=""
                 />
                 <div class="card-body bg-dark">
-                  <p class="card-text text-light"> Amazon Forest: Ravine</p>
+                  <p class="card-text text-light"> Hikers On Mount Everest</p>
                     </div>
               </div>
         </div>
@@ -172,7 +172,7 @@
                   alt=""
                 />
                 <div class="card-body bg-dark">
-                  <p class="card-text text-light"> Amazon Forest: Ravine</p>
+                  <p class="card-text text-light"> Mount Everest</p>
                     </div>
               </div>
         </div>
